--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,6 +1,6 @@
 .hero {
   padding-top: 65px;
-  padding-bottom: 55px;
+  padding-bottom: 50px;
 }
 
 .container {
@@ -16,34 +16,47 @@
 }
 
 .title-hero {
+  position: relative;
   font-family: "Alumni Sans SC", sans-serif;
-font-weight: 400;
-font-size: 48px;
-line-height: 1;
-letter-spacing: 0.19em;
-text-align: center;
-text-transform: uppercase;
-color: #E00D1D;
-margin-bottom: 18px;
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 1;
+  letter-spacing: 0.19em;
+  text-align: center;
+  text-transform: uppercase;
+  color: #e00d1d;
+  margin-bottom: 41px;
 }
 
 .title-text-hero {
+  position: absolute;
+  width: 100%;
+  top: 62px;
+  left: 50%;
+  transform: translateX(-50%);
   font-family: "Cera Stencil PRO";
-font-weight: 900;
-font-style: Black;
-font-size: 40px;
-line-height: 1;
-letter-spacing: 0;
+  font-weight: 900;
+  font-style: Black;
+  font-size: 40px;
+  line-height: 1;
+  letter-spacing: 0;
+  color: #ffffff;
 }
+
 .title-second-hero {
-  font-family: 'Alumni Sans Pinstripe', sans-serif;
+  font-family: "Alumni Sans Pinstripe", sans-serif;
   font-weight: 400;
   font-size: 160px;
   line-height: 1.36;
   letter-spacing: 0;
   text-align: center;
   text-transform: uppercase;
-  background: linear-gradient(180deg, #0e1118, #ffffff, #ffffff, #0e1118);
+  background: linear-gradient(
+    180deg,
+    rgb(14, 17, 24),
+    rgb(255, 255, 255),
+    rgb(14, 17, 24)
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -51,18 +64,124 @@ letter-spacing: 0;
 }
 
 .information-hero {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 .description-hero {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  max-width: 380px;
+  margin-top: 26px;
+  margin-bottom: 26px;
+  margin-left: 23px;
 }
-.description-hero-logo {
-}
-.description-hero-text {
-}
-.description-text {
-}
-.description-hero-btn {
-}
+
 .description-hero-addtext {
+  position: absolute;
+  width: 395px;
+  display: inline-flex;
+  align-items: center;
+  gap: 21px;
+  transform: rotate(270deg);
+  transform-origin: left top;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 1;
+  letter-spacing: 0;
+  color: #ffb53f;
+  top: 544px;
+  left: 1119px;
 }
+
 .description-hero-addtext-point {
+  fill: #ffb53f;
+}
+
+.description-hero-logo {
+  position: relative;
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 128px;
+  line-height: 1.5;
+  letter-spacing: 0;
+  text-align: left;
+  text-shadow: -2.56px -2.56px #ffb53f, 2.56px -2.56px #ffb53f,
+    -2.56px 2.56px #ffb53f, 2.56px 2.56px #ffb53f;
+  color: #000000;
+}
+.description-hero-logo-span {
+  color: #e00d1d;
+}
+
+.fire-hero-line {
+  position: absolute;
+  top: 50px;
+  left: 109px;
+}
+
+.description-hero-text {
+  font-family: "Cera Stencil PRO";
+  font-weight: 900;
+  font-style: Black;
+  font-size: 34px;
+  line-height: 1;
+  letter-spacing: 0;
+  color: #ffffff;
+  margin-bottom: 41px;
+}
+
+.description-text {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 1.27;
+  letter-spacing: 0.03em;
+  margin-bottom: 41px;
+  color: #ffffff;
+}
+
+.description-hero-btn {
+  cursor: pointer;
+  width: 348px;
+  height: 70px;
+  padding: 10px 11px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border: 1.7px solid rgb(255, 255, 255);
+  border-radius: 7px;
+  background-color: #000000;
+  font-family: "Cera Stencil PRO";
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: 0;
+  color: #ffffff;
+  transition: all 300ms ease;
+}
+
+.description-hero-btn:hover {
+  box-shadow: 0 4px 10px rgba(224, 13, 29, 0.7);
+  transform: translateY(-2px);
+}
+
+.description-hero-btn-text {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  width: 100%;
+  height: 100%;
+  background-color: #e00d1d;
+  box-shadow: 0.85px 0.85px 2.56px 0px #ffffff;
+  border-radius: 7px;
+}
+
+.description-hero-btn-icon {
+  fill: #ffffff;
 }
