--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,9 +1,6 @@
 .hero {
-  
   padding-top: 65px;
-  padding-bottom: 186px;
-  z-index: 0;
-   overflow: visible;
+  padding-bottom: 55px;
 }
 
 .container {
@@ -165,6 +162,7 @@
   letter-spacing: 0;
   color: #ffffff;
   transition: all 300ms ease;
+  z-index: 1;
 }
 
 .description-hero-btn:hover {
@@ -189,17 +187,7 @@
   fill: #ffffff;
 }
 
-.hero::before {
-  content: "";
-  position: absolute;
-    top: 1038px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 1440px;
-  height: 620px;
-  background-image: url("/img/webp/fire_bg.webp");
-  background-repeat: no-repeat;
-  background-size:contain;
-  background-position: center;
-  z-index: -1;
+.picture-hero{
+  z-index: 1;
 }
+
