--- a/src/components/Fire/Fire.module.css
+++ b/src/components/Fire/Fire.module.css
@@ -1,16 +1,20 @@
 .fire {
-  padding-top: 50px;
-    padding-bottom: 35px;
+position: relative;
+height: 372px;
+z-index: 0;
 }
 
-.container-fire {
-  width: 100%;
-  max-width: 1440px;
-  margin: 0 auto;
-}
-
-.container-fire img {
-  display: block;
-  width: 100%;
-  height: auto;
+.fire::after {
+  content: "";
+  position: absolute;
+      top: -162px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 1440px;
+  height: 620px;
+  background-image: url("/img/webp/fire_bg.webp");
+  background-repeat: no-repeat;
+  background-size:contain;
+  background-position: center;
+  z-index: -1;
 }
