--- a/src/components/Сhoice/Сhoice.module.css
+++ b/src/components/Сhoice/Сhoice.module.css
@@ -22,14 +22,99 @@
   margin-bottom: 95px;
 }
 
-.productList{
-    display: flex;
-    flex-direction: row;
-    gap: 57px;
+.productList {
+  display: flex;
+  flex-direction: row;
+  gap: 57px;
 }
 
-.productItem{
-    width: 350px;
-    padding: 24px 15px;
+.productItem {
+  width: 350px;
+  padding: 24px 15px;
+  border-radius: 25px;
+  box-shadow: 0px 1px 2px -1px rgba(0, 0, 0, 0.1),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(15px);
+  background: rgba(255, 255, 255, 0.1);
 }
 
+.productTitle {
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 31px;
+  line-height: 1;
+  letter-spacing: 0;
+  text-align: center;
+  color: #e00d1d;
+  margin-bottom: 23px;
+}
+
+.productName {
+  font-family: "Inter", sans-serif;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 1.5;
+  letter-spacing: 0;
+  text-align: center;
+  color: #ffffff;
+  margin-bottom: 15px;
+}
+
+.productNameLogo {
+  color: #e00d1d;
+  margin-right: 10px;
+}
+
+.product {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between
+}
+
+.productDescription {
+  width: 144px;
+  padding-top: 15px;
+}
+
+.descriptionName {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.4;
+  letter-spacing: 0;
+  color: #ffffff;
+}
+
+.descriptionList {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.4;
+  letter-spacing: 0;
+  color: #ffffff;
+}
+
+.productImage {
+  width: 164px;
+  height: 302px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+}
+
+.productImage img {
+  display: block;
+  max-height: 100%;
+  height: auto;
+  width: auto;
+}
+
+.classText {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.3;
+  letter-spacing: 0;
+  color: #ffffff;
+}
