--- a/src/components/FloatingWidget/FloatingWidget.module.css
+++ b/src/components/FloatingWidget/FloatingWidget.module.css
@@ -3,7 +3,7 @@
   bottom: 5px;
   width: 150px;
   height: 80px;
-  right: calc((100vw - 1440px) / 2 - 175px); /* змісти за межу контейнера */
+  right: calc((100vw - 1440px) / 2 - 175px);
   z-index: 1000;
   display: flex;
   flex-direction: row;
