--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -6,10 +6,23 @@
 .container {
   width: 1140px;
   margin: 0 auto;
-  padding: 0;
+  padding: 60px 0;
   border-radius: 25px;
 
   background: rgba(255, 255, 255, 0.1);
+}
+
+.title{
+  font-family: "Cera Stencil PRO";
+font-weight: 900;
+font-style: Black;
+font-size: 48px;
+line-height: 1;
+letter-spacing: 0;
+text-align: center;
+text-transform: uppercase;
+color: #ffffff;
+margin-bottom: 60px;
 }
 
 .information {
@@ -38,7 +51,9 @@
   justify-content: flex-start;
 }
 
-.inputName {
+.inputName,
+.inputMessage
+{
   width: 100%;
   height: 74px;
   padding-left: 25px;
@@ -56,7 +71,8 @@
   color: #ffffff;
 }
 
-.inputName::placeholder {
+.inputName::placeholder,
+.inputMessage::placeholder {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-style: Medium;
@@ -66,14 +82,15 @@
   color: #615e5b;
 }
 
-.errorName {
-  margin-top: 5px;
+.errorName,
+.errorMessage {
   font-family: "Inter", sans-serif;
   font-weight: 300;
   font-size: 12px;
   line-height: 1;
   letter-spacing: 0;
   color: #e00d1d;
+  margin-top: 5px;
 }
 
 :global(.react-tel-input.formPhone) {
@@ -91,14 +108,7 @@
   color: white;
 }
 
-:global(.react-tel-input .flag-dropdown) {
-  background-color: transparent;
-  border: none;
-}
 
-:global(.dropdown) {
-  background-color: white;
-}
 .inputPhone {
   width: 100%;
   height: 74px;
@@ -116,3 +126,52 @@
   letter-spacing: 0;
   color: #000;
 }
+
+
+.btnContact {
+  cursor: pointer;
+  width: 100%;
+  height: 70px;
+  padding: 10px 11px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border: 1.7px solid rgb(255, 255, 255);
+  border-radius: 7px;
+  background-color: transparent;
+  font-family: "Cera Stencil PRO";
+  font-weight: 900;
+  font-size: 20px;
+  line-height: 1.5;
+  letter-spacing: 0;
+  color: #ffffff;
+  transition: all 300ms ease;
+  z-index: 1;
+}
+
+.btnContactSpan {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  width: 100%;
+  height: 100%;
+  background-color: #e00d1d;
+  box-shadow: 0.85px 0.85px 2.56px 0px #ffffff;
+  border-radius: 7px;
+}
+
+@keyframes pulse {
+  0% { transform: scale(1); opacity: 1; }
+  50% { transform: scale(1.2); opacity: 0.7; }
+  100% { transform: scale(1); opacity: 1; }
+}
+
+.iconPhone {
+  animation: pulse 1.2s infinite ease-in-out;
+}
+
+
+
