--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -8,21 +8,20 @@
   margin: 0 auto;
   padding: 60px 0;
   border-radius: 25px;
-
   background: rgba(255, 255, 255, 0.1);
 }
 
-.title{
+.title {
   font-family: "Cera Stencil PRO";
-font-weight: 900;
-font-style: Black;
-font-size: 48px;
-line-height: 1;
-letter-spacing: 0;
-text-align: center;
-text-transform: uppercase;
-color: #ffffff;
-margin-bottom: 60px;
+  font-weight: 900;
+  font-style: Black;
+  font-size: 48px;
+  line-height: 1;
+  letter-spacing: 0;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 60px;
 }
 
 .information {
@@ -32,11 +31,12 @@ margin-bottom: 60px;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
+  margin-bottom: 92px;
 }
 
-.mapWrapper {
+.mapWrapper iframe {
   border-radius: 8px;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  display: block; /* на всяк випадок */
 }
 
 .contactForm {
@@ -52,8 +52,7 @@ margin-bottom: 60px;
 }
 
 .inputName,
-.inputMessage
-{
+.inputMessage {
   width: 100%;
   height: 74px;
   padding-left: 25px;
@@ -83,7 +82,7 @@ margin-bottom: 60px;
 }
 
 .errorName,
-.errorMessage {
+.errorPhone {
   font-family: "Inter", sans-serif;
   font-weight: 300;
   font-size: 12px;
@@ -108,7 +107,6 @@ margin-bottom: 60px;
   color: white;
 }
 
-
 .inputPhone {
   width: 100%;
   height: 74px;
@@ -126,7 +124,6 @@ margin-bottom: 60px;
   letter-spacing: 0;
   color: #000;
 }
-
 
 .btnContact {
   cursor: pointer;
@@ -164,14 +161,58 @@ margin-bottom: 60px;
 }
 
 @keyframes pulse {
-  0% { transform: scale(1); opacity: 1; }
-  50% { transform: scale(1.2); opacity: 0.7; }
-  100% { transform: scale(1); opacity: 1; }
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 0.7;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
 
 .iconPhone {
   animation: pulse 1.2s infinite ease-in-out;
 }
 
+.addressList {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+  gap: 25px;
+}
 
+.addressItem {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 9px;
+}
 
+.iconEmail {
+  fill: #e00d1d;
+}
+
+.iconAddressPhone,
+.iconAddressDelivery,
+.iconAddressLocation {
+  color: #e00d1d;
+}
+
+.addressPhone,
+.addressMail,
+.addressDeliveryText,
+.addressLocationText {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1;
+  letter-spacing: 0;
+  color: #FFFFFF;
+}
