--- a/src/components/FloatingWidget/FloatingWidget.module.css
+++ b/src/components/FloatingWidget/FloatingWidget.module.css
@@ -10,7 +10,8 @@
   gap: 25px;
   justify-content: space-between;
   align-items: center;
-}
+     z-index: 999;
+  }
 
 .call,
 .messenger{
@@ -30,4 +31,15 @@
 
 .shake {
   animation: shake 0.5s ease;
+}
+
+.titleCallback{
+font-family: "Roboto", sans-serif;
+font-weight: 700;
+font-size: 48px;
+line-height: 1;
+letter-spacing: 0.19em;
+text-align: center;
+color: #ffffff;
+margin-bottom: 50px;
 }
